--- a/main.tex
+++ b/main.tex
@@ -634,7 +634,8 @@ more specifically, \textit{memory-one best responses}. It has proven that:
         (Theorem~\ref{memone_group_best_response}).
 \end{itemize}
 
-Theorem~\ref{theorem_one} has to a further theoretical result of identifying
+There is one further theoretical result that can be obtained from Theorem~\ref{theorem_one}, 
+which allows the identification of 
 environments for which cooperation cannot occur (Details are in the
 Appendix\ref{appendix:stability_of_defection}). Moreover,
 Theorem~\ref{memone_group_best_response} does not only have game theoretic
