Add data citation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -423,15 +423,18 @@ author = "Matsui, Akihiko",
   publisher={Frontiers}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@misc{glynatsi2019,
-  author       = {Glynatsi, Nikoleta E.},
-  title        = {{Raw data for: "Stability of defection,
-                   optimisation of strategies and the limits of
-                   memory in the Prisoner's Dilemma."}},
+@misc{nikoleta_glynatsi_2019,
+  author       = {Nikoleta E. Glynatsi and
+                  Vincent A. Glynatsi},
+  title        = {{Raw data for: "A theory of mind. Best responses to 
+                   memory-one strategies. The limitations of
+                   extortion and restricted memory."}},
   month        = sep,
   year         = 2019,
-  doi          = {10.5281/zenodo.3402179},
-  url          = {https://doi.org/10.5281/zenodo.3402179}
+  publisher    = {Zenodo},
+  version      = {1.0.0},
+  doi          = {10.5281/zenodo.3533094},
+  url          = {https://doi.org/10.5281/zenodo.3533094}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%PRE PRINT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -634,4 +637,18 @@ author = "Matsui, Akihiko",
   pages={183--189},
   year={1995},
   publisher={Sage Periodicals Press 2455 Teller Road, Thousand Oaks, CA 91320}
+}
+
+@misc{nikoleta_glynatsi_2020,
+  author       = {Nikoleta Glynatsi and
+                  Vincent A. Knight},
+  title        = {{Raw data Moran Experiments: "A theory of mind. 
+                   Best responses to memory-one strategies. The
+                   limitations of extortion and restricted memory"}},
+  month        = sep,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {1.0.0},
+  doi          = {10.5281/zenodo.4036427},
+  url          = {https://doi.org/10.5281/zenodo.4036427}
 }
