include citations to data to the main.tex

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -423,7 +423,7 @@ author = "Matsui, Akihiko",
   publisher={Frontiers}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@misc{nikoleta_glynatsi_2019,
+@misc{glynatsi2019,
   author       = {Nikoleta E. Glynatsi and
                   Vincent A. Glynatsi},
   title        = {{Raw data for: "A theory of mind. Best responses to 
@@ -434,7 +434,7 @@ author = "Matsui, Akihiko",
   publisher    = {Zenodo},
   version      = {1.0.0},
   doi          = {10.5281/zenodo.3533094},
-  url          = {https://doi.org/10.5281/zenodo.3533094}
+  howpublished          = {https://doi.org/10.5281/zenodo.3533094}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%PRE PRINT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -466,7 +466,7 @@ author = "Matsui, Akihiko",
   publisher    = {Zenodo},
   version      = {0.0.1},
   doi          = {10.5281/zenodo.3533146},
-  url          = {https://doi.org/10.5281/zenodo.3533146}
+  howpublished = {https://doi.org/10.5281/zenodo.3533146}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%SIMILAR WORKS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @article{Hilbe2017,
@@ -650,5 +650,5 @@ author = "Matsui, Akihiko",
   publisher    = {Zenodo},
   version      = {1.0.0},
   doi          = {10.5281/zenodo.4036427},
-  url          = {https://doi.org/10.5281/zenodo.4036427}
+  howpublished          = {https://doi.org/10.5281/zenodo.4036427}
 }
