--- a/main.tex
+++ b/main.tex
@@ -596,8 +596,8 @@ Figure. This is done to be able to compare to a high performing strategy that
 has a theory of mind of the opponent but not of the population density.
 The ratio shows a relatively high performance compared to a non
 dynamic best response strategy. The mean ratio over all values of \(K\) and all
-experiments is \\(1.044\\).
-. In some cases this dynamic updating results in a 25\% increase in the
+experiments is \(1.044\).
+In some cases this dynamic updating results in a 25\% increase in the
 absorption probability.
 
 As denoted before it is clear that the best response strategy in general does not have a
@@ -651,7 +651,7 @@ data sets of 1000 and 152 pairs of memory-one opponents equivalently, archived
 at~\cite{glynatsi2019}.
 
 A further set of results for Moran processes with a dynamically updating best
-response player was generated and is archived in~\cite{}. % TODO Archive
+response player was generated and is archived in~\cite{nikoleta_glynatsi_2020}.
 This confirmed the previous results which is that high performance
 requires adaptability and not extortion. It also provides a framework for future
 stability of optimal behaviour in evolutionary settings.
