--- a/bibliography.bib
+++ b/bibliography.bib
@@ -424,14 +424,17 @@ author = "Matsui, Akihiko",
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{glynatsi2019,
-  author       = {Glynatsi, Nikoleta E.},
-  title        = {{Raw data for: "Stability of defection,
-                   optimisation of strategies and the limits of
-                   memory in the Prisoner's Dilemma."}},
+  author       = {Nikoleta E. Glynatsi and
+                  Vincent A. Glynatsi},
+  title        = {{Raw data for: "A theory of mind. Best responses to 
+                   memory-one strategies. The limitations of
+                   extortion and restricted memory."}},
   month        = sep,
   year         = 2019,
-  doi          = {10.5281/zenodo.3402179},
-  url          = {https://doi.org/10.5281/zenodo.3402179}
+  publisher    = {Zenodo},
+  version      = {1.0.0},
+  doi          = {10.5281/zenodo.3533094},
+  howpublished          = {https://doi.org/10.5281/zenodo.3533094}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%PRE PRINT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -463,7 +466,7 @@ author = "Matsui, Akihiko",
   publisher    = {Zenodo},
   version      = {0.0.1},
   doi          = {10.5281/zenodo.3533146},
-  url          = {https://doi.org/10.5281/zenodo.3533146}
+  howpublished = {https://doi.org/10.5281/zenodo.3533146}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%SIMILAR WORKS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @article{Hilbe2017,
@@ -601,4 +604,51 @@ author = "Matsui, Akihiko",
   pages={9312},
   year={2015},
   publisher={Nature Publishing Group}
+}
+
+@article{Imhof2007,
+  title={Tit-for-tat or win-stay, lose-shift?},
+  author={Imhof, Lorens A and Fudenberg, Drew and Nowak, Martin A},
+  journal={Journal of theoretical biology},
+  volume={247},
+  number={3},
+  pages={574--580},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{Boyd1989,
+  title={Mistakes allow evolutionary stability in the repeated prisoner's dilemma game},
+  author={Boyd, Robert},
+  journal={Journal of theoretical Biology},
+  volume={136},
+  number={1},
+  pages={47--56},
+  year={1989},
+  publisher={Elsevier}
+}
+
+@article{Wu1995,
+  title={How to cope with noise in the iterated prisoner's dilemma},
+  author={Wu, Jianzhong and Axelrod, Robert},
+  journal={Journal of Conflict resolution},
+  volume={39},
+  number={1},
+  pages={183--189},
+  year={1995},
+  publisher={Sage Periodicals Press 2455 Teller Road, Thousand Oaks, CA 91320}
+}
+
+@misc{nikoleta_glynatsi_2020,
+  author       = {Nikoleta Glynatsi and
+                  Vincent A. Knight},
+  title        = {{Raw data Moran Experiments: "A theory of mind. 
+                   Best responses to memory-one strategies. The
+                   limitations of extortion and restricted memory"}},
+  month        = sep,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {1.0.0},
+  doi          = {10.5281/zenodo.4036427},
+  howpublished          = {https://doi.org/10.5281/zenodo.4036427}
 }
