--- a/moran_data/moran/main.ipynb
+++ b/moran_data/moran/main.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis of Moran process data.\n",
-    "\n",
-    "Copy latest version of the data with:\n",
-    "\n",
-    "```\n",
-    "scp siren:Memory-size-in-the-prisoners-dilemma/moran_data/moran/data.csv .\n",
-    "```"
+    "# Analysis of Moran process data.\n"
    ]
   },
   {
@@ -1172,6 +1166,26 @@
    ],
    "source": [
     "df_with_improved_performance.describe()[[\"x_K\", \"SSE\", \"ratio\"]].transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "122"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_with_improved_performance[\"seed\"].nunique()"
    ]
   }
  ],
