Make some tweaks to response.
Specifically add discussion about Moran process addition.

--- a/main.tex
+++ b/main.tex
@@ -662,6 +662,8 @@ the reasearch of repeated games~\cite{Boyd1989, Imhof2007, Nowak1993, Wu1995}. I
 future work we would consider interactions with ``noise''. Noise can be
 incoroporated into our formulation and it can be shown that the utility remains a ratio
 of quadratic forms (Details see Appendix~\ref{appendix:noise}).
+Another avenue of investigation would be to understand if and/or when an
+evolutionary trajectory leads to a best response strategy.
 
 By specifically exploring the entire space of memory-one strategies to identify
 the best strategy for a variety of situations, this work adds to the literature
