--- a/response/main.tex
+++ b/response/main.tex
@@ -5,8 +5,8 @@
 \usepackage{authblk}
 \usepackage{pdfpages}
 
-\title{Stability of defection, optimisation of strategies and the limits of
-memory in the Prisoner's Dilemma RESPONSE TO REVIEWS}
+\title{A theory of mind: Best responses to memory-one strategies. The limitations
+of extortion and restricted memory.}
 
 \author{Nikoleta E. Glynatsi, Vincent A. Knight}
 
@@ -17,7 +17,11 @@ memory in the Prisoner's Dilemma RESPONSE TO REVIEWS}
 We would like to open this response by thanking the reviewers for their
 thoughtful comments and suggestions. We have fully taken their comments on board
 and made significant modifications and additions to the manuscript.
-We feel this has greatly improved the work.
+We feel this has greatly improved the work. Given the nature of these changes,
+we hope that the editorial team are willing to overlook the fact that
+they stipulated that if any further modification are required the manuscript
+would be rejected. Hopefully if further minor modifications are needed we will
+be given the opportunity to make them.
 
 Both reviewers commented on different aspects of the paper and so our
 modifications naturally fit in to two categories (which we will discuss in
@@ -25,14 +29,14 @@ detail comment by comment):
 
 \begin{itemize}
     \item The first reviewer suggested that the manuscript lacked discussion of
-    noise and of the literature on the theory of mind and of noise. We address
+    noise and of the literature on the theory of mind. We address
     this including noise in our formulation (in the appendix) and by discussing
     relevant literature on the theory of mind (in the introduction).
     \item The second reviewer questioned the claims on the evolutionary
     stability of the best response and expressed that the manuscript would
-    benefit from such experiments and discussion. We have included an example of
-    how our formulation can be used in evolutionary processes, more
-    specifically in a Moran process.
+    benefit from such experiments and discussion. To address this, we have
+    have obtained expressions for the fixation probability of a best response
+    strategy in a Moran process that adapts dynamically to the population.
 \end{itemize}
 
 We will now take each comment of the reviewers in turn and highlight our efforts
@@ -52,8 +56,8 @@ to improve the work.
 \end{verbatim}
 
 We agree with the reviewer that noise is an important aspect of research. Noise
-is not included in our manuscript, but following the reviewers comment we
-demonstrate, in the appendix, how noise can be incooporated in our formulation.
+is now included in the discussion, specifically pointing at the appendix where
+we have obtained expressions for the utilities with noise.
 
 \begin{verbatim}
     ``The paper lacks sufficient discussion of previous works, especially regarding
@@ -62,7 +66,7 @@ demonstrate, in the appendix, how noise can be incooporated in our formulation.
     relevance of the paper.''
 \end{verbatim}
 
-We agree with the comment of the reviewer. We have discussed several articles
+We have discussed several articles
 that have been proposed by the reviewer.
 
 \begin{verbatim}
@@ -74,10 +78,9 @@ that have been proposed by the reviewer.
     as a corollary to Theorem 1, and leave all details and Figure 4 to the appendix.''
 \end{verbatim}
 
-We have made changes in order to improved the narative. This includes moving
-Section 1.2 to the appendix, changing the orders of our results and removing
-the discussion of tournaments with self interactions from the "limitations
-of extortionate behaviour" section.
+We have made changes in order to improved the narrative. This includes moving
+Section 1.2 to the appendix, changing the order of our results and removing
+the discussion of tournaments with self interactions.
 
 \begin{verbatim}
     On that note, the lack of evolutionary results is somewhat disappointing,
@@ -94,7 +97,27 @@ of extortionate behaviour" section.
     the text (e.g. the authors missed this in the caption for Fig.2).
 \end{verbatim}
 
-We have made this suggested change.
+This particular comment proved fruitful for us as it lead to many
+discussions and some interesting new work. Thank to the reviewer.
+
+We note that we have not addressed whether or not a best response strategy would
+arise in the evolutionary trajectory. This is because the best response strategy
+is obtained using the quadratic ratio, essentially transforming the
+problem to a finite dimensional optimisation problem. As such, an evolutionary
+algorithm could be used to find the best response. However, in our particular case
+Bayesian optimisation is the tool chosen. This does not offer insight as to
+whether or not the best response strategy is on the evolutionary trajectory.
+We have added a comment about this in the conclusion as it would prove to be an
+interesting avenue for future work.
+
+We have addressed the latter parts of this comment with a significant addition
+of work to the manuscript. We no longer refer vaguely to Moran processes but
+instead explicitly consider a Moran process where the best response player is
+able to dynamically adapt to the population distribution (and a classic Moran
+process). As well as the theoretic expressions obtained (modifications of the
+standard results on Moran processes) this is coupled with a data set of
+experiments on the Moran process. We feel that this is a strong addition to the
+manuscript that ensures there is no further confusion.
 
 \section{Marked changes made to the manuscript}
 
