Remove TODO from cover letter.

--- a/response/cover_letter.tex
+++ b/response/cover_letter.tex
@@ -4,8 +4,8 @@
 \setlength{\parskip}{1em}
 \usepackage{authblk}
 
-\title{Stability of defection, optimisation of strategies and the limits of
-memory in the Prisoner's Dilemma COVER LETTER}
+\title{A theory of mind: Best responses to memory-one strategies. The limitations
+of extortion and restricted memory.}
 
 \author{Nikoleta E. Glynatsi, Vincent A. Knight}
 
@@ -15,12 +15,11 @@ memory in the Prisoner's Dilemma COVER LETTER}
 
 To the Editorial Board Member,
 
-Thank you very much for reviewing our manuscript, and we would like to extend
+Thank you very much for considering our manuscript, and we would like to extend
 our gratitude to the reviewers for their thoughtful comments and suggestions. We
 have fully taken their comments on board and made significant modifications to
 both the mathematical arguments and the narrative. We feel this has greatly
 improved the work.
-%TODO say we are sorry that the evolutionary part was misleading.
 
 Please find attached a point-by-point response to reviewer's concerns. We hope
 that you find our responses satisfactory.
