add affiliation to me and fixes caption
In the caption tournaments with no self interactions were being
mentioned.

--- a/main.tex
+++ b/main.tex
@@ -40,11 +40,12 @@
 
 \title{A theory of mind: Best responses to memory-one strategies. The limitations
 of extortion and restricted memory.}
-\author[1, *]{Nikoleta E. Glynatsi}
+\author[1, 2, *]{Nikoleta E. Glynatsi}
 \author[1]{Vincent A. Knight}
 
 \affil[1]{Cardiff University, School of Mathematics, Cardiff, United Kingdom}
-\affil[*]{Corresponding author: Nikoleta E. Glynatsi, glynatsine@cardiff.ac.uk}
+\affil[2]{Max Planck Institute for Evolutionary Biology, Pl\"{o}n, Germany}
+\affil[*]{Corresponding author: Nikoleta E. Glynatsi, glynatsi@evolbio.mpg.de}
 \date{}
 \setcounter{Maxaffil}{0}
 \renewcommand\Affilfont{\itshape\small}
@@ -413,7 +414,7 @@ distribution is given in Table~\ref{table:sserror_stats}.
     \begin{center}
         \includegraphics[width=.5\linewidth]{img/best_respones_sserror.pdf}
     \end{center}
-    \caption{SEE distribution for best response in tournaments without self interactions.}\label{fig:sse_distributions}
+    \caption{SEE distribution for best response in tournaments with \(N=2\).}\label{fig:sse_distributions}
 \end{figure}
 
 For the best response in tournaments with \(N=2\) the
